--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 requests==2.18.1
 Flask==0.12.2
 flask-restplus==0.12.1
+Flask_JWT_Extended==3.7.2
+Flask_Bcrypt==0.7.1
 python-dotenv
+elasticsearch
