--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^0.28.11",
     "downshift": "^3.2.2",
     "fetch-intercept": "^2.2.3",
+    "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
